--- a/KGSample/KGSample/KGSample/GEventEdit.xaml
+++ b/KGSample/KGSample/KGSample/GEventEdit.xaml
@@ -8,7 +8,8 @@
         GlowBrush="{DynamicResource AccentColorBrush}"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
-        Title="スケジュール管理" Height="800" Width="1050" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
+        Title="スケジュール編集" Height="800" Width="1050" FontSize="12"
+		ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Closing="MetroWindow_Closing">
 	<Window.Resources>
 		<ResourceDictionary Source="/Style/StyleDic.xaml"/>
 	</Window.Resources>
@@ -35,7 +36,7 @@
 		</Grid.RowDefinitions>
 
 		<Label Grid.Row="0"  Grid.Column="1" Grid.ColumnSpan="6" 
-								Name="url_lb" Content="url"  HorizontalAlignment="Left"  Margin="0,0,0,0"
+								Name="htmlLink_lb" Content="url"  HorizontalAlignment="Left"  Margin="0,0,0,0"
 								VerticalAlignment="Top" />
 
 		<Button Grid.Row="1" Grid.Column="0"
@@ -56,64 +57,93 @@
 
 		<Label Grid.Row="2" Grid.Column="0"   Content="日時" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
 		<StackPanel Grid.Row="2"    Grid.Column="1"   Orientation="Horizontal"
-								HorizontalAlignment="Left" Height="25" Margin="5,0.2,0,0"  
+								HorizontalAlignment="Left" Height="25" Margin="0,0.2,0,0"  
 								 VerticalAlignment="Top" >
-			<Label
-							Name="start_date" Content="2020年　開始日" HorizontalAlignment="Left"  Margin="0,0,0,0" 
-							VerticalAlignment="Top" />
-			<Label 
-							Name="start_time" Content="開始時間" HorizontalAlignment="Left"  Margin="0,0,0,0" 
-							VerticalAlignment="Top" />
-			<Label 
-							Content="～"  HorizontalAlignment="Left"  Margin="10,0,10,0" 
+			<DatePicker Name="start_date_dp"
+								HorizontalAlignment="Left" VerticalAlignment="Top"/>
+			<Mah:TimePicker  Name="start_time_tp" 
+			/>
+			<Label Content="～"  HorizontalAlignment="Left"  Margin="10,0,10,0" 
 							VerticalAlignment="Top"/>
-			<Label  Name="end_time" Content="終了時間"  HorizontalAlignment="Left"  
-							Margin="0,0,0,0" VerticalAlignment="Top"/>
-			<Label 
-						Name="end_date" Content="2020年　終了日"  HorizontalAlignment="Left"  Margin="0,0,0,0" 
-						VerticalAlignment="Top"/>
+			<Mah:TimePicker  Name="end_time_tp" />
+			<DatePicker Name="end_date_dp"
+								HorizontalAlignment="Left" VerticalAlignment="Top"/>
 		</StackPanel>
-		<Label Grid.Row="2" Grid.Column="3"  
-						Name="gmt" Content="(GMT+09:00) 日本標準時"  
-						HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top"/>
+		<StackPanel Grid.Row="2" Grid.Column="3"   Orientation="Horizontal"
+								 Margin="0,0,5,0" HorizontalAlignment="Right" >
+			<Label Name="time_zone_lb" Content="GMT+09:00) 日本標準時" 
+						HorizontalAlignment="Left"  Margin="0,0,0,0" 
+						VerticalAlignment="Top" />
+			<Button  Name="tim_zone_attach_bt" Content="タイムゾーン"  
+							HorizontalAlignment="Center" Margin="5,0,5,0"  VerticalAlignment="Bottom" />
+		</StackPanel>
 
-		<Label Grid.Row="3" Grid.Column="0"   
-						Content="終日" Margin="0,0,0,0" VerticalAlignment="Top" />
 		<Label Grid.Row="3"  Grid.Column="1"  
 						Name="rep" Content="繰り返し" HorizontalAlignment="Left"  Margin="0,0,0,0" 
 						VerticalAlignment="Top" />
+		<StackPanel Grid.Row="3" Grid.Column="1"   Orientation="Horizontal"
+								 Margin="0,0,5,0" >
+			<CheckBox Name="syuujitu_c" Content="終日" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+			<ComboBox Name="kurikaesi_cb" Margin="10,0,0,0" >
+				<Button Content="繰り返さない"/>
+				<Button Content="毎日"/>
+				<Button Content="毎週"/>
+				<Button Content="毎月"/>
+				<Button Content="毎年"/>
+				<Button Content="毎週平日（月～金）"/>
+				<Button Content="カスタム"/>
+			</ComboBox>
+		</StackPanel>
 
 		<Label Grid.Row="4" Grid.Column="0"   
 						Content="場所" HorizontalAlignment="Right"  Margin="0,0,0,0" 
 						VerticalAlignment="Top" />
-		<Label Grid.Row="4"  Grid.Column="1"  Grid.ColumnSpan="3" 
-						Name="location" Content="場所" HorizontalAlignment="Left"  Margin="0,0,0,0" 
-						VerticalAlignment="Top" />
+		<TextBox Grid.Row="4"  Grid.Column="1"  Grid.ColumnSpan="2" 
+						Name="location_tb" Text="場所"  />
 
 		<!--通知  / ゲスト-->
 		<Label Grid.Row="6" Grid.Column="0"   
 						Content="×" HorizontalAlignment="Right"  Margin="0,0,0,0" 
 						VerticalAlignment="Top" />
 		<StackPanel Grid.Row="6" Grid.Column="1"   Orientation="Horizontal"
-								 Margin="5,0,5,0" >
+								 Margin="0,0,5,0" >
 			<Label Grid.Row="6" Grid.Column="1"   
-						Content="アカウント"  />
-			<Label Grid.Row="6"  Grid.Column="2"  Grid.ColumnSpan="6" 
-						Name="color_id" Content="カラー" />
+						Name="email_lb" Content="アカウント"  />
+			<ComboBox Name="color_cb" Width="120">
+				<ListBoxItem/>
+			</ComboBox>
 		</StackPanel>
 
 		<Label Grid.Row="8" Grid.Column="0"   
 						Content="予定" 
 					/>
 		<StackPanel Grid.Row="8" Grid.Column="1"   Orientation="Horizontal"
-								 Margin="5,0,5,0" >
-			<Label  Name="til" Content="有無"/>
-			<Label Name="koukai" Content="デフォルトの公開予定" Margin="5,0,0,0" />
+								 Margin="0,0,5,0" >
+			<ComboBox Name="yotei_cb" SelectedIndex="1" >
+				<Button Content="予定あり"/>
+				<Button Content="予定なし"/>
+			</ComboBox>
+			<ComboBox Name="koukai_cb" SelectedIndex="1" >
+				<Button Content="デフォルトの公開設定"/>
+				<Button Content="公開"/>
+				<Button Content="非公開"/>
+			</ComboBox>
+			<Label Name="koukai" Content="デフォルトの公開予定" Margin="0,0,0,0" />
 		</StackPanel>
 
+
 		<Label Grid.Row="9" Grid.Column="0"   Content="詳細" HorizontalAlignment="Right"  Margin="0,0,0,0" VerticalAlignment="Top" />
-		<TextBox Grid.Row="9"  Grid.Column="1" 
-						Name="idil" Text="詳細"  />
+
+		<StackPanel Grid.Row="9" Grid.Column="1"   Margin="0,0,5,0" >
+			<ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
+				<Button  Name="attach_bt" Content="添付" 
+								HorizontalAlignment="Left" VerticalAlignment="Bottom" />
+			</ToolBar>
+			<StackPanel  Name="attachments_sp" Orientation="Horizontal" Margin="0,0,5,5" >
+			</StackPanel>
+			<TextBox Grid.Row="9"  Grid.Column="1"  MinLines="10" 
+						Name="description_tb" Text="詳細"  />
+		</StackPanel>
 
 		<Label Grid.Row="10" Grid.Column="0"   
 					Content="添付" HorizontalAlignment="Right"   />
@@ -129,8 +159,6 @@
 			<ListBox Name="attach_lb" HorizontalAlignment="Left"  VerticalAlignment="Stretch" 
 								Width="228"  Height="200"
 								Margin="0.8,0,0,0"/>
-			<Button  Name="attach_bt" Content="添付"  
-							HorizontalAlignment="Center" Margin="5,0,5,0"  VerticalAlignment="Bottom" />
 		</StackPanel>
 	</Grid>
 </Mah:MetroWindow>
